# rust-scheduler

./: .gitignore  Cargo.toml  build.rs  compose.yaml  design.txt  loadgen.sh  monitoring.sh  scheduler.sh  worker.sh
monitoring/grafana/provisioning/dashboards/: scheduler.json
monitoring/prometheus/: prometheus.yml
proto/: scheduler.proto
src/: loadgen.rs  metrics.rs  queue.rs  scheduler.rs  worker.rs
